fixed text-align of roomSelect

--- a/wp_book_me/public/css/style.css
+++ b/wp_book_me/public/css/style.css
@@ -19,7 +19,11 @@ html, body {
 }
 #roomSelect {
     width:inherit !important;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 .container-fluid {
     display: table;
     padding: 0;
